--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,8 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 'com.github.lhotari:reactive-pulsar-spring-boot-starter:0.0.3-SNAPSHOT'
+	implementation 'org.apache.pulsar:pulsar-client:2.8.0'
+	implementation 'org.apache.pulsar:pulsar-client-admin:2.8.0'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
