--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,12 +13,17 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    
+
     - name: Set up JDK 11
       uses: actions/setup-java@v2
       with:
         java-version: '11'
         distribution: 'adopt'
-    
+
+    - name: Clone reactive-pulsar which is required by the composite-build
+      run: |
+        cd ..
+        git clone --depth 1 https://github.com/lhotari/reactive-pulsar
+
     - name: Check with Gradle
       run: ./gradlew check
