--- a/build.gradle
+++ b/build.gradle
@@ -20,14 +20,14 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
-	implementation 'com.github.lhotari:reactive-pulsar-spring-boot-starter:0.0.4-SNAPSHOT'
+	implementation 'com.github.lhotari:reactive-pulsar-spring-boot-starter:0.0.4'
+	testImplementation 'com.github.lhotari:reactive-pulsar-spring-test-support:0.0.4'
 	implementation 'org.apache.pulsar:pulsar-client:2.8.0'
 	implementation 'org.apache.pulsar:pulsar-client-admin:2.8.0'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
-	testImplementation 'com.github.lhotari:reactive-pulsar-spring-test-support:0.0.4-SNAPSHOT'
 }
 
 test {
