Enable composite build with reactive-pulsar when .compositebuild file exists

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,4 +26,6 @@ jobs:
         git clone --depth 1 https://github.com/lhotari/reactive-pulsar
 
     - name: Check with Gradle
-      run: ./gradlew check
+      run: |
+        touch .compositebuild
+        ./gradlew check
