--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,5 @@
 rootProject.name = 'reactive-pulsar-showcase'
 
-//includeBuild '../reactive-pulsar'
+if (file('.compositebuild').exists()) {
+    includeBuild '../reactive-pulsar'
+}
