--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,7 @@
 rootProject.name = 'reactive-pulsar-showcase'
 
+include 'webhook-target-app'
+
 if (file('.compositebuild').exists()) {
     includeBuild '../reactive-pulsar'
 }
