--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ sourceSets {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'org.springframework.boot:spring-boot-starter-log4j2'
     implementation 'com.github.lhotari:reactive-pulsar-spring-boot-starter:0.0.8'
     testImplementation 'com.github.lhotari:reactive-pulsar-spring-test-support:0.0.8'
     implementation 'org.apache.pulsar:pulsar-client:2.8.1'
@@ -43,6 +44,13 @@ dependencies {
     testImplementation 'org.springframework.cloud:spring-cloud-contract-wiremock:3.0.3'
     testImplementation 'org.awaitility:awaitility'
 }
+
+configurations {
+    all {
+        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
+    }
+}
+
 
 configurations {
     all {
