--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,17 @@
 plugins {
-    id 'org.springframework.boot' version '2.7.6'
-    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+    id 'org.springframework.boot' version '3.2.0'
+    id 'io.spring.dependency-management' version '1.1.4'
     id 'java'
     id 'project-report'
-    id "com.github.ben-manes.versions" version "0.41.0"
+    id "com.github.ben-manes.versions" version "0.50.0"
 }
 
 group = 'com.github.lhotari'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
+
+java {
+    sourceCompatibility = '17'
+}
 
 configurations {
     compileOnly {
@@ -42,7 +45,7 @@ dependencies {
     intTestCompileOnly 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'io.projectreactor:reactor-test'
-    testImplementation 'org.springframework.cloud:spring-cloud-contract-wiremock:3.1.0'
+    testImplementation 'org.springframework.cloud:spring-cloud-contract-wiremock:4.1.0'
     testImplementation 'org.awaitility:awaitility'
 }
 
