--- a/build.gradle
+++ b/build.gradle
@@ -33,10 +33,7 @@ sourceSets {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-log4j2'
-    implementation 'com.github.lhotari:reactive-pulsar-spring-boot-starter:0.2.1'
-    testImplementation 'com.github.lhotari:reactive-pulsar-spring-test-support:0.2.1'
-    implementation 'org.apache.pulsar:pulsar-client:3.0.2'
-    implementation 'org.apache.pulsar:pulsar-client-admin:3.0.2'
+    implementation 'org.springframework.boot:spring-boot-starter-pulsar-reactive'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testCompileOnly 'org.projectlombok:lombok'
@@ -47,6 +44,7 @@ dependencies {
     testImplementation 'io.projectreactor:reactor-test'
     testImplementation 'org.springframework.cloud:spring-cloud-contract-wiremock:4.1.0'
     testImplementation 'org.awaitility:awaitility'
+    intTestImplementation 'org.testcontainers:pulsar'
 }
 
 configurations {
@@ -59,8 +57,8 @@ configurations {
 configurations {
     all {
         resolutionStrategy.dependencySubstitution {
-            substitute module('org.apache.pulsar:pulsar-client') using module('org.apache.pulsar:pulsar-client-original:3.0.2')
-            substitute module('org.apache.pulsar:pulsar-client-admin') using module('org.apache.pulsar:pulsar-client-admin-original:3.0.2')
+            substitute module('org.apache.pulsar:pulsar-client') using module('org.apache.pulsar:pulsar-client-original:3.1.1')
+            substitute module('org.apache.pulsar:pulsar-client-admin') using module('org.apache.pulsar:pulsar-client-admin-original:3.1.1')
         }
     }
 }
@@ -82,7 +80,7 @@ tasks.register('integrationTest', Test) {
     classpath = sourceSets.intTest.runtimeClasspath
     shouldRunAfter test
     useJUnitPlatform()
-    environment('PULSAR_CONTAINER_IMAGE', 'apachepulsar/pulsar:3.0.2')
+    environment('PULSAR_CONTAINER_IMAGE', 'apachepulsar/pulsar:3.1.1')
 }
 
 check.dependsOn integrationTest
