--- a/build.gradle
+++ b/build.gradle
@@ -46,7 +46,10 @@ sourceSets {
     }
 }
 
+def pulsarVersion = '4.0.0'
+
 dependencies {
+    implementation enforcedPlatform("org.apache.pulsar:pulsar-bom:${pulsarVersion}")
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-log4j2'
     implementation 'org.springframework.boot:spring-boot-starter-pulsar-reactive'
@@ -69,12 +72,11 @@ configurations {
     }
 }
 
-
 configurations {
     all {
         resolutionStrategy.dependencySubstitution {
-            substitute module('org.apache.pulsar:pulsar-client') using module('org.apache.pulsar:pulsar-client-original:4.0.0')
-            substitute module('org.apache.pulsar:pulsar-client-admin') using module('org.apache.pulsar:pulsar-client-admin-original:4.0.0')
+            substitute module('org.apache.pulsar:pulsar-client') using module("org.apache.pulsar:pulsar-client-original:${pulsarVersion}")
+            substitute module('org.apache.pulsar:pulsar-client-admin') using module("org.apache.pulsar:pulsar-client-admin-original:${pulsarVersion}")
         }
     }
 }
