--- a/build.gradle
+++ b/build.gradle
@@ -48,8 +48,16 @@ sourceSets {
 
 def pulsarVersion = '4.0.0'
 
+// when using io.spring.dependency-management plugin, the bom must be declared in the dependencyManagement section
+dependencyManagement {
+     imports {
+          mavenBom "org.apache.pulsar:pulsar-bom:${pulsarVersion}"
+     }
+}
+
 dependencies {
-    implementation enforcedPlatform("org.apache.pulsar:pulsar-bom:${pulsarVersion}")
+    // this would be used if io.spring.dependency-management plugin wasn't used
+    //implementation enforcedPlatform("org.apache.pulsar:pulsar-bom:${pulsarVersion}")
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-log4j2'
     implementation 'org.springframework.boot:spring-boot-starter-pulsar-reactive'
@@ -69,15 +77,6 @@ dependencies {
 configurations {
     all {
         exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
-    }
-}
-
-configurations {
-    all {
-        resolutionStrategy.dependencySubstitution {
-            substitute module('org.apache.pulsar:pulsar-client') using module("org.apache.pulsar:pulsar-client-original:${pulsarVersion}")
-            substitute module('org.apache.pulsar:pulsar-client-admin') using module("org.apache.pulsar:pulsar-client-admin-original:${pulsarVersion}")
-        }
     }
 }
 
